# advanced-cpp

./: .gitignore  big_map.txt  big_map_fail.txt  run_bulk_competitive.sh  run_our_alg.sh  small_map.txt
FakeAlg/Algorithm/: Algorithm_322213836_212054837.cbp  AlwaysForward.cpp  AlwaysForward.h  CMakeLists.txt  ConcreteBattleInfo.cpp  ConcreteBattleInfo.h  FakePlayer.cpp  FakePlayer.h  FakeTankAlgorithm.cpp  FakeTankAlgorithm.h  LookPause.cpp  LookPause.h  SmartEvader.cpp  SmartEvader.h  SmartHunt.cpp  SmartHunt.h  SmartHybridAlg.cpp  SmartHybridAlg.h  SpinShooter.cpp  SpinShooter.h
asgn1/: CMakeCache.txt  CMakeLists.txt  Makefile  asgn1  asgn1.cbp  cmake_install.cmake  input_errors.txt  output_input.txt  output_input_a.txt  output_input_b.txt  output_input_c.txt  readme.md  tanks_game
asgn1/graphs/: CLASS_UML.puml
asgn1/include/: definitions.h
asgn1/input/: input.txt  input1.txt  input2.txt  input3.txt  input5.txt  input_a.txt  input_b.txt  input_c.txt  input_test.txt
asgn1/logs/: input_errors.txt  output_input1.txt  output_input3.txt  outputinput1.txt
asgn1/src/: main.cpp
asgn1/tests/: CMakeLists.txt  IMPORTANT.md  run_tests.sh
asgn2/: CMakeLists.txt  input_a.txt  input_b.txt  input_c.txt  main.cpp  map.txt  output_a.txt  output_b.txt  output_c.txt  readme.md  small_map.txt
asgn2/common/: ActionRequest.h  BattleInfo.h  Player.h  PlayerFactory.h  SatelliteView.h  TankAlgorithm.h  TankAlgorithmFactory.h
asgn2/implementations/: AlgorithmOne.cpp  AlgorithmOne.h  AlgorithmTwo.cpp  AlgorithmTwo.h  BoardSatelliteView.h  ConcreteBattleInfo.cpp  ConcreteBattleInfo.h  ConcretePlayer.cpp  ConcretePlayer.h  ConcretePlayerFactory.h  ConcreteTankAlgorithm.cpp  ConcreteTankAlgorithm.h  ConcreteTankAlgorithmFactory.h  PlayerOne.cpp  PlayerOne.h  PlayerTwo.cpp  PlayerTwo.h
asgn2/include/: definitions.h
asgn2/src/: main.cpp
asgn2/utils/: Direction.h  DirectionUtils.cpp  DirectionUtils.h  MapUtils.cpp  MapUtils.h  Position.h
asgn3 - Copy/: CMakeLists.txt
asgn3 - Copy/Algorithm/: ConcreteBattleInfo.cpp  ConcreteBattleInfo.h  TankAlgorithm_322213836_212054837.h
asgn3 - Copy/GameManager/: GameBoard.h  GameManager_322213836_212054837.cpp
asgn3 - Copy/Simulator/: AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  BoardInitInfo.h  CMakeLists.txt  ComparativeSimulator.cpp  ComparativeSimulator.h  CompetitiveSimulator.cpp  CompetitiveSimulator.h  ErrorLogger.cpp  ErrorLogger.h  GameContainer.cpp  GameContainer.h  GameManagerRegistrar.cpp  GameManagerRegistrar.h  PlayerRegistration.cpp  SOHandle.h  Simulator.cpp  Simulator.h  TankAlgorithmRegistration.cpp  main.cpp
asgn3 - Copy/UserCommon/: BoardSatelliteView.h
asgn3 - Copy/common/: AbstractGameManager.h  ActionRequest.h  BattleInfo.h  GameManagerRegistration.h  GameResult.h  Player.h  PlayerRegistration.h  SatelliteView.h  TankAlgorithm.h  TankAlgorithmRegistration.h
asgn3/Algorithm/: Algorithm_322213836_212054837.cbp  CMakeLists.txt  ConcreteBattleInfo.cpp  ConcreteBattleInfo.h  Player_322213836_212054837.cpp  Player_322213836_212054837.h  TankAlgorithm_322213836_212054837.cpp  TankAlgorithm_322213836_212054837.h
asgn3/GameManager/: BoardSatelliteView.h  CMakeLists.txt  GameBoard.cpp  GameBoard.h  GameManager_322213836_212054837.cbp  GameManager_322213836_212054837.cpp  GameManager_322213836_212054837.h  Logger.cpp  Logger.h  comparative_results.txt
asgn3/Simulator/: AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  BoardInitInfo.h  CMakeLists.txt  ComparativeSimulator.cpp  ComparativeSimulator.h  CompetitiveSimulator.cpp  CompetitiveSimulator.h  ErrorLogger.cpp  ErrorLogger.h  GameContainer.cpp  GameContainer.h  GameManagerRegistrar.cpp  GameManagerRegistrar.h  GameManagerRegistration.cpp  GameManager_322213836_212054837_Log_20250630_165415  GameManager_322213836_212054837_input3_Algorithm_206038929_314620071 (2)_Algorithm_209399021_208239152_20250819_114510.txt  GameManager_322213836_212054837_input3_Algorithm_322213836_212054837_AlwaysForward_20250819_112746.txt  GameManager_322213836_212054837_input3_Algorithm_322573304_322647603_Algorithm_322213836_212054837_20250713_152842.txt  GameManager_322213836_212054837_input3_Algorithm_322996059_211779582_SmartEvader_20250819_113229.txt  GameManager_322213836_212054837_input3_AlwaysForward_SmartHunt_20250819_113248.txt  GameManager_322213836_212054837_input3_LookPause_SpinShooter_20250819_113403.txt  GameManager_322213836_212054837_input3_SmartEvader_AlgorithmFake_20250819_113355.txt  GameManager_322213836_212054837_input3_SmartHunt_SmartHybridAlg_20250819_114508.txt  GameManager_322213836_212054837_input5_SmartEvader_AlwaysForward_20250819_114545.txt  GameManager_322213836_212054837_input5_SmartHybridAlg_LookPause_20250819_114545.txt  GameManager_322213836_212054837_input_a_AlgorithmFake_LookPause_20250702_194713.txt  GameManager_322213836_212054837_input_a_AlgorithmFake_SmartHunt_20250706_132825.txt  GameManager_322213836_212054837_input_a_AlgorithmFake_SmartHunt_20250819_174624.txt  GameManager_322213836_212054837_input_a_Algorithm_209399021_208239152_Algorithm_322996059_211779582_20250819_174624.txt  GameManager_322213836_212054837_input_a_Algorithm_212535058_324022904_Algorithm_322213836_212054837_20250819_174624.txt  GameManager_322213836_212054837_input_a_Algorithm_322213836_212054837_SmartHybridAlg_20250706_132825.txt  GameManager_322213836_212054837_input_a_Algorithm_322213836_212054837_SmartHybridAlg_20250706_171333.txt  GameManager_322213836_212054837_input_a_Algorithm_322213836_212054837_SmartHybridAlg_20250819_174624.txt  GameManager_322213836_212054837_input_a_Algorithm_322213836_212054837_SpinShooter_20250702_194713.txt  GameManager_322213836_212054837_input_a_Algorithm_322996059_211779582_AlgorithmFake_20250819_174624.txt  GameManager_322213836_212054837_input_a_Algorithm_322996059_211779582_Algorithm_322213836_212054837_20250703_181418.txt  GameManager_322213836_212054837_input_a_Algorithm_322996059_211779582_Algorithm_322213836_212054837_20250706_132948.txt  GameManager_322213836_212054837_input_a_AlwaysForward_AlgorithmFake_20250702_194713.txt  (+145 more)
(+308 files in other folders)
